--- a/templates/core/partials/footer.html
+++ b/templates/core/partials/footer.html
@@ -1,4 +1,4 @@
 {% load i18n %}
-<footer>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer_bottom">
     {% trans "All rights reserved, Onit Solutions LLC 2015-2016" %}
-</footer>
+</div>
