--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -39,6 +39,7 @@
     <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="img/favicon.png">
     <!-- 	-->
+    <link rel="stylesheet" href="{% static 'css/overrides_old.css' %}">
     <link rel="stylesheet" href="{% static 'css/overrides.css' %}">
     <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     <script type="text/javascript">
