--- a/templates/core/partials/spa_navigation.html
+++ b/templates/core/partials/spa_navigation.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 price_box_next_cont">
-    <a href="#" class="price_box_next next-step">
+    <span class="price_box_next next-step">
         {% trans 'Next' %}
         <i class="fa fa-chevron-right"></i>
-    </a>
+    </span>
 </div>
