--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -38,7 +38,7 @@
                 	<span class="rate-sell"></span>
                     <br><span class="currency"></span><br>
 
-                <a href="#" class="price_box2_a trigger trigger-buy">{% trans "Sell" %}</a>
+                <a href="#" class="price_box2_a trigger trigger-sell">{% trans "Sell" %}</a>
 
                 <div class="price_box_selectbox_cont">
                     	<input type="text" class="price_box_selectbox_cont_textbox amount amount-coin" placeholder="0.1">
