--- a/templates/core/partials/breadcrumbs.html
+++ b/templates/core/partials/breadcrumbs.html
@@ -3,7 +3,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 step_panel_cont">
     <div class="step_panel">
         <div class="step_panel_box process-step step1">
-            <a href="#order" data-toggle="tab">
+            <a href="#menu1" data-toggle="tab">
                 <img src="{% static 'images/step_circle.png' %}"
                      class="step-icon" alt="{% trans "Order" %}">
                 <p>{% trans "Order" %}</p>
@@ -11,7 +11,7 @@
          </div>
 
         <div class="step_panel_box process-step step2">
-            <a href="#auth" data-toggle="tab">
+            <a href="#menu2" data-toggle="tab">
                 <img src="{% static 'images/step_circle2.png' %}"
                      class="step-icon" alt="{% trans "Authentication" %}">
                 <p>{% trans "Login" %}</p>
@@ -19,7 +19,7 @@
         </div>
 
           <div class="step_panel_box process-step step3">
-            <a href="#confirm" data-toggle="tab">
+            <a href="#menu3" data-toggle="tab">
                 <img src="{% static 'images/step_circle3.png' %}"
                      class="step-icon" alt="{% trans 'Confirmation' %}">
                 <p>{% trans 'Confirm' %}</p>
