--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -57,7 +57,7 @@
     </nav>
       <ul class="pull-right auth">
         {% if user.is_authenticated %}
-            <a href="{% url 'core.profile' %}">
+            <a href="{% url 'core.user_profile' %}">
                 {% if user.username %}
                     {{ user.username }}
                 {% else %}
