--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -2,7 +2,7 @@
 {% load static %}
 <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 logo_panel">
-        <a href="#"><img src="{% static 'images/logo.png' %}/" alt="nexchange"></a>
+        <a href="#"><img src="{% static 'images/logo.png' %}" alt="nexchange"></a>
     </div>
 
     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 topright_panel">
