--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -7,25 +7,25 @@
         </div>
        	<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ACCOUNT' %} </h4>
-            <a href="#">{% trans 'Login' %}</a>
-			<a href="#">SignUp</a>
+            <a href="/login">{% trans 'Login' %}</a>
+			<a href="/signup">SignUp</a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ABOUT' %} </h4>
-            <a href="#">{% trans 'About Us' %}</a>
-            <a href="#">{% trans 'Careers' %}</a>
-            <a href="#">{% trans 'Press' %}</a>
-            <a href="#">{% trans 'Conference' %}</a>
-            <a href="#">{% trans 'Legal' %} &amp; {% trans 'Privacy' %}</a>
-            <a href="#">Security</a>
+            <a href="/about">{% trans 'About Us' %}</a>
+            <a href="/careers">{% trans 'Careers' %}</a>
+            <a href="/press">{% trans 'Press' %}</a>
+            <a href="/conference">{% trans 'Conference' %}</a>
+            <a href="/legal_Privacy">{% trans 'Legal' %} &amp; {% trans 'Privacy' %}</a>
+            <a href="security">Security</a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'RESOURCES' %} </h4>
-            <a href="#">{% trans 'FAQ' %}</a>
-            <a href="#">{% trans 'Blog' %}</a>
-            <a href="#">{% trans 'Fees' %}</a>
-            <a href="#">{% trans 'Support' %}</a>
-            <a href="#">{% trans 'Trading Guide' %}</a>
+            <a href="/faq">{% trans 'FAQ' %}</a>
+            <a href="/blog">{% trans 'Blog' %}</a>
+            <a href="/fees">{% trans 'Fees' %}</a>
+            <a href="/support">{% trans 'Support' %}</a>
+            <a href="/trading_guide">{% trans 'Trading Guide' %}</a>
         </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
    	  <h4>{% trans 'Social' %}</h4>
