Add links to payment methods footer

--- a/templates/core/partials/supported_payments.html
+++ b/templates/core/partials/supported_payments.html
@@ -1,14 +1,21 @@
 {% load static %}
+{% load i18n %}
 {#{% load filters %}#}
 <div class="supported-payments col-lg-12 col-md-12 col-sm-12 col-xs-12 greypanel">
-    {# banks #}
     <div class="container">
-        {%  for idx in "123456" %}
-        <div class="col-xs-4 col-sm-2">
+    {% with "WebMoney Alfa-Bank Sberbank Qiwi-Wallet VTB24 Scrill" as banks_name%}
+        {%  for idx in banks_name.split %}
+        <div class="footerpay col-xs-4 col-sm-2">
             {% with 'images/footer-logo'|add:idx|add:'.png' as bank_img %}
-                <img src="{% static bank_img %}"  alt="">
+{#                <img src="{% static bank_img %}"  alt=bank_img >#}
+                <div class="payment-type-trigger-footer" data-type={{ idx }} data-identifier="">
+                    <div class="col col-xs-12">
+                        <img src="{% static bank_img %}"  alt={{ idx }} class="btn">
+                    </div>
+                </div>
             {% endwith %}
         </div>
         {% endfor %}
+    {% endwith %}
     </div>
 </div>
