add txt files for cms content

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -62,9 +62,10 @@
         </div>
             {% block main %}
             {% endblock %}
+    {% placeholder "Content" %}
+{#    {% render_model_block request.current_page "changelist" %}{% endrender_model_block %}#}
     </div>
-    {% block content %} {% placeholder "Content" %}
-    {% render_model_block request.current_page "changelist" %}{% endrender_model_block %}
+    {% block content %}
     {% endblock content %}
    {% block footer %}
        {% include 'core/partials/supported_payments.html' %}
