--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -17,7 +17,7 @@
             <a href="/press">{% trans 'Press' %}</a>
             <a href="/conference">{% trans 'Conference' %}</a>
             <a href="/legal_Privacy">{% trans 'Legal' %} &amp; {% trans 'Privacy' %}</a>
-            <a href="security">{% trans  'Security' %}</a>
+            <a href="/security">{% trans  'Security' %}</a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'RESOURCES' %} </h4>
