translate buy modal window

--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -18,7 +18,7 @@
             </option>
             {% endfor %}
             </select>
-            <input type="submit" class="topright_panel_submit" value="Go" />
+            <input type="submit" class="topright_panel_submit" value={%  trans 'Go' %} />
           </form>
     </div>
 </div>
