--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -6,11 +6,11 @@
 {% block formcontent %}
 <h2>Password reseted</h2>
 <p class="alert alert-success">
-    {% translate 'Your password has been reset.' %}
-    {% translate 'You can now login using this new password.' %}
+    {% trans 'Your password has been reset.' %}
+    {% trans 'You can now login using this new password.' %}
      <br>
 </p>
-<p><a href="{% url 'accounts.login' %}">{% translate 'Login now' %}</a></p>
+<p><a href="{% url 'accounts.login' %}">{% trans 'Login now' %}</a></p>
 {% endblock %}
 
 
