--- a/templates/core/user_profile.html
+++ b/templates/core/user_profile.html
@@ -62,6 +62,7 @@
 
         {% bootstrap_form profile_form %}
         {% bootstrap_form user_form %}
+        {% bootstrap_form referral_form %}
 
         <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Update Profile">
     </form>
