--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,9 +1,8 @@
 {# Load the tag library #}
-{% load cms_tags menu_tags sekizai_tags %}
+{#{% load cms_tags menu_tags sekizai_tags %}#}
 {% load bootstrap3 %}
 {% load staticfiles %}
 {% load i18n %}
-
 <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 {# Load CSS and JavaScript #}
@@ -52,10 +51,10 @@
     {% if GOOGLE_ANALYTICS_PROPERTY_ID %}
         {% include "core/analitycs/ga.html" %}
     {% endif %}
-    {% render_block "css" %}
+{#    {% render_block "css" %}#}
 </head>
 <body>
-    {% cms_toolbar %}
+{#    {% cms_toolbar %}#}
     <div class="container">
         <div class="menuContainer">
             {% include 'core/partials/menu.html' %}
@@ -63,8 +62,9 @@
             {% block main %}
             {% endblock %}
     </div>
-    {% block content %} {% placeholder "Content" %}
-    {% render_model_block request.current_page "changelist" %}{% endrender_model_block %}
+    {% block content %}
+{#        {% placeholder "Content" %}#}
+{#    {% render_model_block request.current_page "changelist" %}{% endrender_model_block %}#}
     {% endblock content %}
    {% block footer %}
        {% include 'core/partials/supported_payments.html' %}
@@ -96,7 +96,7 @@
     <script src="{% static 'js/footer.js' %}"></script>
     {% bootstrap_javascript %}
     {% block extra_js_footer %} {% endblock %}
-    {% render_block "js" %}
+{#    {% render_block "js" %}#}
 </body>
 </html>
 
