--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -7,8 +7,13 @@
         </div>
        	<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ACCOUNT' %} </h4>
-            <a href="/login">{% trans 'Login' %}</a>
-			<a href="/signup">{% trans 'SignUp' %}</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'core.user_profile' %}">{% trans 'Profile' %}</a>
+            {% else %}
+                <a href="{% url 'accounts.login' %}">{% trans 'Login' %}</a>
+			    <a href="{% url 'core.user_registration' %}">{% trans 'SignUp' %}</a>
+            {% endif %}
+
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ABOUT' %} </h4>
