add yandex metrika

--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -17,7 +17,7 @@
             </option>
             {% endfor %}
             </select>
-            <input type="submit" class="topright_panel_submit" value={%  trans 'Go' %} />
+            <input type="submit" class="topright_panel_submit" value=">" />
           </form>
     </div>
 </div>
