--- a/templates/core/partials/steps/step_authentication.html
+++ b/templates/core/partials/steps/step_authentication.html
@@ -27,7 +27,8 @@
                 {% trans "Send again"%}
             </span>
             <span class="btn btn-primary verify-acc hidden">
-                {% trans "Go"%}
+{#                {% trans "Go"%}#}
+                >
             </span>
         </div>
     </div>
