--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -26,10 +26,11 @@
 
 				<div class="visible-xs"> &nbsp;</div>
 				
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					<form method="post" class="form">
-						{% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10 nopadding " %}
+				<div class="col-xs-12 col-sm-6 col-md-6 nopadding" >
+					<form method="post" class="form form-search">
 						<button type="submit" class="btn btn-default search-order" ><i class="fa fa-search"></i>&nbsp;</button>
+                        {% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10 nopadding " %}
+
 					    {% csrf_token %}
 				    </form>
 			    </div>
@@ -38,9 +39,104 @@
 			</div>
 			
 			<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-12">
-			<div class="table-responsive">
-			  <table class=" table-hover table-condensed ">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
+            <div class="panel panel-default visible-sm visible-xs">
+              {% for order in orders %}
+                  <div class="panel-heading">{{ order.created_on |date:"D d M Y"}}</div>
+                  <div class="panel-body">
+                    <div class = "headers-mobile">{% trans "Reference" %} {{ order.unique_reference }} </div>
+                    <div class = "headers-mobile">{% trans "Currency" %} {{ order.currency.code }} </div>
+                    <div class = "headers-mobile">{% trans "Amount" %} {{ order.amount_cash }}</div>
+                    <div class = "headers-mobile">{% trans "BTC" %} {{ order.amount_btc }} </div>
+
+                      <span id="spin_confirming_{{order.pk}}" style="display:none">
+                        <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;
+                           {% trans "Setting as paid..." %}
+                    </span>
+
+                    <div class = "headers-mobile">
+                        {% trans "Paid" %}
+                        <label class="checkbox-inline">
+                            <input type="checkbox"
+                                data-url="{% url 'core.payment_confirmation' order.pk %}"
+                                data-pk="{{order.pk}}"
+                                data-offstyle="danger"
+                                data-onstyle="success"
+                                {% if order.is_paid %}
+                                    checked
+                                {% endif %}
+                                {% if order.frozen %}
+                                    disabled
+                                {% endif %}
+                                data-toggle="toggle"
+                                data-on="{% trans 'Paid' %}"
+                                data-width="90px"
+                                data-off="{% trans 'Not Paid' %}">
+                        </label>
+                    </div>
+
+                  <div class = "headers-mobile">
+                    {% trans "Released" %}
+                    {% if order.is_released == 1 %}
+                        <img src="/static/icons/check_16.png" \>
+                    {% else %}
+                        <img src="/static/icons/close_16.png" \>
+                    {% endif %}
+                  </div>
+
+
+                  <div class = "headers-mobile">
+                    {% trans "Completed" %}
+                    {% if order.is_complete == 1 %}
+                        <img src="/static/icons/check_16.png" \>
+                    {% else %}
+                        <img src="/static/icons/close_16.png" \>
+                    {% endif %}
+                  </div>
+
+
+                  <div class = "headers-mobile">
+                    {% trans "Withdraw Address" %}
+                    <div id="td-frozen-withdraw-{{order.pk}}"
+                        {% if not order.frozen %}
+                            style="display:none"
+                        {% endif %}>
+
+                        <span class="frozen">
+                            {{order.withdraw_address | default_if_none:"Not Defined"}}
+                        </span>
+                    </div>
+
+                    <div id="td-withdraw-{{order.pk}}"
+                            {% if order.frozen %}
+                                style="display:none"
+                            {% endif %}>
+
+                        <i class="fa fa-pencil" aria-hidden="true"></i>
+
+                        <span class="withdraw_address" id="span-withdraw-{{order.pk}}"
+                            data-toggle="popover"
+                            title="Set Withdraw Address"
+                            data-html="true"
+                            data-container="body"
+                            data-placement="top"
+                            data-pk="{{order.pk}}"
+                            data-url-update="{% url 'core.update_withdraw_address' order.pk %}"
+                            data-url-create="{% url 'core.create_withdraw_address' %}">
+
+                            {{order.withdraw_address | default_if_none:"Not Defined"}}
+                        </span>
+                    </div>
+                  </div>
+
+
+                  </div>
+              {% endfor %}
+            </div>
+
+			<div class="table-responsive visible-md visible-lg ">
+			  <table class=" table-hover table-condensed col-lg-12">
   				<tr class="table-order">
   					<th >{% trans "Date" %}</th>
   					<th>{% trans "Reference" %}</th>
@@ -88,9 +184,9 @@
 										disabled
 									{% endif %}
 									data-toggle="toggle"  
-									data-on="{% trans 'Paid' %}" 
+									data-on="{% trans 'Paid' %} "
 									data-width="90px"
-									data-off="{% trans 'Not Paid' %}">
+									data-off="{% trans 'Not Paid' %} ">
 							</label>
 						</td>	
 						
@@ -153,6 +249,8 @@
 			</div><!-- end responsive -->
 			</div>
 		    </div>
+
+
 
 		<div class="pagination">
 		    <span class="step-links">
