--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -20,16 +20,16 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
                     <a href="{% url 'core.order_add' %}">
-                        <button type="button" class="btn btn-success new-order" > {% trans "New" %}</button>
+                        <button type="button" class="btn-success new-order" > {% trans "New" %}</button>
                     </a>
 				</div>
 
 				<div class="visible-xs"> &nbsp;</div>
 				
-				<div class="col-xs-12 col-sm-6 col-md-6 nopadding" >
+				<div class="col-xs-12 col-sm-6 col-md-6" >
 					<form method="post" class="form form-search">
-						<button type="submit" class="btn btn-default search-order" ><i class="fa fa-search"></i>&nbsp;</button>
-                        {% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10 nopadding " %}
+						<button type="submit" class="btn btn-default search-order pull-right" ><i class="fa fa-search"></i>&nbsp;</button>
+                        {% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10 nopadding pull-right" %}
 
 					    {% csrf_token %}
 				    </form>
@@ -41,40 +41,63 @@
 			<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
 
-            <div class="panel panel-default visible-sm visible-xs">
+            <div  class="panel panel-default  visible-sm visible-xs">
               {% for order in orders %}
-                  <div class="panel-heading">{{ order.created_on |date:"D d M Y"}}</div>
-                  <div class="panel-body">
-                    <div class = "headers-mobile">{% trans "Reference" %} {{ order.unique_reference }} </div>
-                    <div class = "headers-mobile">{% trans "Currency" %} {{ order.currency.code }} </div>
-                    <div class = "headers-mobile">{% trans "Amount" %} {{ order.amount_cash }}</div>
-                    <div class = "headers-mobile">{% trans "BTC" %} {{ order.amount_btc }} </div>
+                  <div id="{{ order.unique_reference}}" class="headers-mobile panel-heading">{{ order.created_on |date:"D d M Y"}}
+                        <a class="pull-right" data-toggle="collapse" data-parent="{{ order.unique_reference}}" href="#body-{{ order.unique_reference}}">
+                            {% trans "details" %}
+                        </a>
+                  </div>
+
+                  <div id="body-{{ order.unique_reference}}" class="panel-body panel-collapse collaps collapse">
+
+                  <div>
+                      <div class = "headers-mobile header-text">{% trans "Reference" %}</div>
+                      {{ order.unique_reference }}
+                  </div>
+
+                  <div>
+                        <div class = "headers-mobile header-text">{% trans "Currency" %}</div>
+                        {{ order.currency.code }}
+                    </div>
+
+                  <div>
+                        <div class = "headers-mobile header-text">{% trans "Amount" %}</div>
+                        {{ order.amount_cash }}
+                    </div>
+                  <div>
+                        <div class = "headers-mobile header-text">{% trans "BTC" %}</div>
+                        {{ order.amount_btc }}
+                  </div>
+
 
                       <span id="spin_confirming_{{order.pk}}" style="display:none">
                         <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;
                            {% trans "Setting as paid..." %}
                     </span>
 
-                    <div class = "headers-mobile">
+                    <div class = "headers-mobile header-text">
                         {% trans "Paid" %}
-                        <label class="checkbox-inline">
-                            <input type="checkbox"
-                                data-url="{% url 'core.payment_confirmation' order.pk %}"
-                                data-pk="{{order.pk}}"
-                                data-offstyle="danger"
-                                data-onstyle="success"
-                                {% if order.is_paid %}
-                                    checked
-                                {% endif %}
-                                {% if order.frozen %}
-                                    disabled
-                                {% endif %}
-                                data-toggle="toggle"
-                                data-on="{% trans 'Paid' %}"
-                                data-width="90px"
-                                data-off="{% trans 'Not Paid' %}">
-                        </label>
                     </div>
+
+                    <label class="checkbox-inline">
+                        <input type="checkbox"
+                            data-url="{% url 'core.payment_confirmation' order.pk %}"
+                            data-pk="{{order.pk}}"
+                            data-offstyle="danger"
+                            data-onstyle="success"
+                            {% if order.is_paid %}
+                                checked
+                            {% endif %}
+                            {% if order.frozen %}
+                                disabled
+                            {% endif %}
+                            data-toggle="toggle"
+                            data-on="{% trans 'Paid' %}"
+                            data-width="90px"
+                            data-off="{% trans 'Not Paid' %}">
+                    </label>
+
 
                   <div class = "headers-mobile">
                     {% trans "Released" %}
@@ -96,9 +119,11 @@
                   </div>
 
 
-                  <div class = "headers-mobile">
+                  <div class = "headers-mobile header-text">
                     {% trans "Withdraw Address" %}
-                    <div id="td-frozen-withdraw-{{order.pk}}"
+                  </div>
+
+                    <div class = "header-text" id="td-frozen-withdraw-{{order.pk}}"
                         {% if not order.frozen %}
                             style="display:none"
                         {% endif %}>
@@ -108,7 +133,7 @@
                         </span>
                     </div>
 
-                    <div id="td-withdraw-{{order.pk}}"
+                    <div class = "header-text" id="td-withdraw-{{order.pk}}"
                             {% if order.frozen %}
                                 style="display:none"
                             {% endif %}>
@@ -128,7 +153,7 @@
                             {{order.withdraw_address | default_if_none:"Not Defined"}}
                         </span>
                     </div>
-                  </div>
+
 
 
                   </div>
