--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -115,6 +115,7 @@ textarea, input, select { outline: none !important; }
     width: 100%;
     height: 250px; margin: 0 auto;
     border: 2px solid #8cc63f;
+    padding: 0px 5px 5px 5px;
     border-radius: 1em;
     background: #F3F3F3;
 }
@@ -355,7 +356,9 @@ a:focus
 }
 
 
-.price_box{text-align:center; font-size:35px; font-family: 'Montserrat-Light', 'Gotham'; margin:40px 0;}
+.price_box{text-align:center; font-size:35px; font-family: 'Montserrat-Light', 'Gotham'; margin:12px 0;}
+
+.price_box_ticker{margin:40px 0;}
 
 .price_box span{font-family: 'Montserrat-Bold', 'Gotham';}
 
@@ -365,11 +368,7 @@ a:focus
 
 .price_box2_a{background-color:#ee1d25 !important;}
 
-.price_box_mid{text-align:center; margin-top: 220px;}
-
-.price_box_mid img{margin:240px 0 0 0;}
-
-.price_box_selectbox_cont{display:inline-block; width:100%; border:2px solid #8cc63f; margin:40px 0 0 0;}
+.price_box_selectbox_cont{display:inline-block; width:100%; border:2px solid #8cc63f;}
 
 .price_box_selectbox_cont_textbox{float:left; text-align: center; width:65%; background-color:transparent; border:solid #8cc63f; font-size:18px; padding:8px 10px;border-width:0 2px 0 0; }
 
@@ -405,35 +404,24 @@ a:focus
 /*new design end*/
 
 /*start new design responsive*/
-@media screen and (max-width:1366px)
-
-{
-
-}
+@media screen and (max-width:1366px) { }
 
 @media screen and (max-width:1200px)
-
 {
-.menupanel ul li a
-{
-	font-size:14px;
-	padding:8px 10px;
+    .menupanel ul li a
+    {
+        font-size:14px;
+        padding:8px 10px;
+    }
 }
 
-
-}
-
-@media screen and (max-width:1100px)
-
-{
-
-}
+@media screen and (max-width:1100px) { }
 
 @media screen and (max-width:999px)
 
 {
 
-.navbar{text-align:center; }
+.navbar{ text-align:center; }
 
 .navbar-nav
 {
@@ -444,30 +432,13 @@ a:focus
 
 .navbar{margin-bottom:5px;}
 
+@media screen and (max-width:950px) { }
 
-@media screen and (max-width:950px)
-{
+@media screen and (max-width:900px) { }
 
+@media screen and (max-width:850px) { }
 
-}
-
-@media screen and (max-width:900px)
-{
-}
-
-@media screen and (max-width:850px)
-{
-
-
-
-
-}
-
-@media screen and (max-width:800px)
-{
-
-
-}
+@media screen and (max-width:800px) { }
 
 
 @media screen and (max-width:767px)
@@ -482,26 +453,13 @@ a:focus
 
 .footer{text-align:center;}
 
-
 }
 
+@media screen and (max-width:700px) { }
 
+@media screen and (max-width:667px) { }
 
-@media screen and (max-width:700px)
-{
-}
-
-@media screen and (max-width:667px)
-{
-
-
-}
-
-@media screen and (max-width:600px)
-
-{
-
-}
+@media screen and (max-width:600px) { }
 
 @media screen and (max-width:550px) {
  .step-icon
@@ -515,9 +473,6 @@ a:focus
     .chart_panel_selectbox {
         width: 120px;
     }
-    .price_box_mid .fa.exchange-sign{
-        font-size: 2em;
-    }
 
     .price_box_selectbox_cont_textbox{
         border-width: 0 0 2px 0;
@@ -528,9 +483,6 @@ a:focus
         width: 100%;
         display: block;
     }
-    .price_box_mid {
-        margin-top: 260px;
-    }
 }
     /*
 vertical design
@@ -540,18 +492,11 @@ vertical design
 }
 
 
-@media screen and (max-width:480px)
-
+@media screen and (max-width:480px)  { }
+@media screen and (max-width:400px)  { }
+@media screen and (min-width: 768px)
 {
-
-
-}
-
-
-@media screen and (max-width:400px)
-{
-
-
+    .price_box_next_cont { margin: 25px 0; }
 }
 
 /*end new design responsive*/
