--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -28,7 +28,7 @@
           ga('send', 'pageview');
     </script>
     <meta charset="utf-8">
-    <title>.:BTC-X:.</title>
+    <title>{% trans 'Nexchange' %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -48,7 +48,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="{% static 'images/icon.png'%}">
     <!-- 	-->
     <link rel="stylesheet" href="{% static 'css/overrides_old.css' %}">
     <link rel="stylesheet" href="{% static 'css/overrides.css' %}">
