--- a/templates/core/partials/modals/payment_type.html
+++ b/templates/core/partials/modals/payment_type.html
@@ -5,12 +5,12 @@
 
       <!-- Modal content-->
       <div class="modal-content">
-        <div class="modal-header">
+        <div>
           <button type="button" class="close" data-dismiss="modal">×</button>
             {% if type == 'buy' %}
-                <h4 class="modal-title">{% trans 'How would you like to pay?' %}</h4>
+                <h4 class="modal_head">{% trans 'How would you like to pay?' %}</h4>
             {% else %}
-                <h4 class="modal-title">{% trans 'How would you like to get paid?' %}</h4>
+                <h4 class="modal_head">{% trans 'How would you like to get paid?' %}</h4>
             {% endif %}
         </div>
         <div class="modal-body">
