add view for referrals

--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="{% if request.resolver_match.url_name == 'referrals.main' %} active {% endif %}">
-                    <a href="#">
+                    <a href="/referrals">
                         {% trans "Referrals" %}
                     </a>
                 </li>
