referrences front end

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -91,7 +91,7 @@
     </div>
 
    {% block footer %}
-       {% include 'core/partials/supported_payments.html' %}
+{#       {% include 'core/partials/supported_payments.html' %}#}
    {% endblock %}
 
     {% include 'core/partials/popular_faq.html' %}
