--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -92,6 +92,10 @@
     background-color: #8cc63f
 }
 
+.confirm-order{
+    background-color: #F4F4F4;
+}
+
 .payment-label{
     background-color: #97CB53;
     color: #FEFEFD;
@@ -117,6 +121,20 @@
     border-bottom: 1px solid black;
 }
 
+.payline{
+    border-bottom: 1px solid;
+    border-bottom-color: #231F20;
+    padding-bottom: 5px;
+    margin-right: 250px;
+    margin-left: 250px;
+    margin-bottom: -15px;
+}
+
+.step-confirm div.confirmation-elem{
+    font-size: 22px;
+}
+
+
 .headers-mobile {
     color: greenyellow !important;
 }
@@ -127,6 +145,44 @@
 
 .header-text{
     display: inline;
+}
+
+.place-order{
+    width: 200px;
+    max-width: 100%;
+    height: 50px;
+    color: #FFFFFF;
+    font-size: 30px;
+    padding: 5px 0;
+    background-color: #8BC53F;
+    border-radius: 8px !important;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-right: 10px;
+    border-color: transparent;
+
+}
+
+.place-cancel{
+    width: 200px;
+    max-width: 100%;
+    height: 50px;
+    font-size: 30px;
+    padding: 5px 0;
+    background-color: #767676;
+    border-radius: 8px !important;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    color: #FFFFFF !important;
+}
+
+.payment-preference-confirm{
+    margin-bottom: -5px;
+    color: #767676;
+}
+
+.for{
+    color: #767676;
 }
 
 .panel-details:focus  {
