referrences front end fix buy robokassa, fix ticker bug

--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -40,7 +40,7 @@
             <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
             <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
             <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
-            <button  class="buy-go btn btn-success trigger btn-lg place-order ">{% trans "Buy" %}</button>
+            <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
             <a href="/" class="btn place-cancel">Cancel</a>
         </div>
     </div>
